--- a/src/components/MovieCard.module.css
+++ b/src/components/MovieCard.module.css
@@ -59,5 +59,9 @@
         font-family:sans-serif;
         pointer-events:none;
     }
+
+    .card:hover .img{
+        transform:scale(1);
+    }
 }
 
