--- a/src/pages/MovieDetails.module.css
+++ b/src/pages/MovieDetails.module.css
@@ -1,14 +1,17 @@
 .card{
     max-width: 800px;
     width: 90%;
-    margin:70px auto;
+    margin:70px auto ;
     display:flex;
     justify-content: center;
     height:350px;
     flex-wrap:wrap;
     gap:1em;
+    
 }
-
+.title{
+    margin:0;
+}
 .paragraph{
     font-weight:300;
     letter-spacing: 1px;
@@ -30,9 +33,14 @@
     flex-direction: column;
     justify-content:space-evenly;
     width:40%;
+    margin-bottom:40px;
 }
 
 @media screen and (max-width:560px) {
+
+    .card{
+        height:300px;
+    }
     .texts{
         width:60%;
         gap:1em;
